# lazycomposer

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  cliff.toml
.claude/: settings.local.json
.github/workflows/: release.yml
src/: lib.rs  main.rs
src/composer/: exec.rs  mod.rs  parser.rs  runner.rs  types.rs
src/config/: mod.rs
src/logger/: mod.rs
src/security/: mod.rs  sanitize.rs  validate.rs
src/ui/: app.rs  keys.rs  layout.rs  messages.rs  mod.rs  text.rs
src/ui/components/: choice.rs  confirm.rs  help.rs  input.rs  mod.rs  spinner.rs  statusbar.rs  tabbar.rs
src/ui/panels/: audit.rs  detail.rs  mod.rs  outdated.rs  output.rs  packages.rs  project.rs
src/ui/style/: mod.rs  styles.rs  theme.rs
testdata/: composer.json
